# x4-pinat

./: .coverage  .coverage.run100a  .coverage.run100b  .gitignore  AI_DEVELOPMENT_GUIDE.md  KNOWN_DEFECTS.md  MISSING_FUNCTIONALITY.md  README.md  pyproject.toml
docs/: galaxytrader-component-candidates.md
examples/: ai_script_example.py  basic_example.py  library_example.py
scripts/: generate_capability_matrix.py
src/x4md/: __init__.py  _xsd_validation.py  expressions.py  project.py
src/x4md/core/: __init__.py  xml.py
src/x4md/md/: __init__.py  actions.py  common.py  conditions.py  document.py  recipes.py  types.py
src/x4md/x4ai/: __init__.py  document.py  nodes.py  types.py
tests/: conftest.py  test_ai_nodes.py  test_capability_matrix.py  test_core.py  test_md_actions.py  test_md_conditions.py  test_md_document.py  test_md_recipes.py  test_project.py  test_render_time_validation.py  test_rendering.py  test_type_consistency.py  test_xsd_conformance.py  test_xsd_contract.py  xsd_support.py
